fix legacy link alignment

--- a/src/PurpleBanner.css
+++ b/src/PurpleBanner.css
@@ -116,7 +116,7 @@
 
   font-weight: 500;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 32px;
   display: inline-block;
   text-align: center;
   letter-spacing: 0.005em;
@@ -158,6 +158,7 @@ a.PurpleBanner__link:not(.PurpleBanner__link--active):not(:only-child):focus-vis
   text-align: center;
   border-radius: 6px;
   padding: 3px 12px;
+  line-height: 26px;
   transition: background-color 300ms;
   display: flex;
   justify-content: center;
